[package]
name = "mass-binary-versions"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cache GitHub Actions artifact and contained-file hashes for Music Assistant AirPlay helper provenance."

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
